# udp_msg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  temp.cpp  test.cpp
.github/workflows/: main.yml
examples/: receive-example.cpp  receive.cpp  send.cpp
include/: udp_msg.hpp
include/udp_msg/: compat_config.hpp  pack_msg.hpp  receive.hpp  receiver.hpp  send.hpp  sender.hpp  sock.hpp  sock_compat.hpp  socket.hpp  types.hpp  unpack_msg.hpp
scripts/: build_and_run_temp.sh
src/: udp_msg.cpp
test/: receive.cpp  send.cpp  send_receive.cpp  test_config.hpp
test/matlab/: test__sine.m
